--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,11 @@ a {
   .btn {
     font-size: 1.5rem;
   }
+
+  .btn--stretched {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
 
 /* Inputs */
