--- a/css/styles.css
+++ b/css/styles.css
@@ -741,6 +741,10 @@ a {
     text-align: left;
     align-self: center;
   }
+
+  .hero__tagline {
+    text-align: justify;
+  }
 }
 
 @media screen and (min-width: 1024px) {
